cmake_minimum_required(VERSION 3.28)
project(C__ProgrammingExercises)

set(CMAKE_CXX_STANDARD 20)

add_executable(C__ProgrammingExercises main.cpp )
add_executable(TaskOne ChapterOne/TaskOne.cpp
        ChapterOne/TaskOne.cpp)
add_executable(new_target ChapterOne/TaskTwo.cpp)
add_executable(new_target1 ChapterOne/TaskThree.cpp)
add_executable(new_target2 ChapterOne/TaskFour.cpp)
add_executable(new_target3 ChapterOne/TaskFive.cpp)
